tests/syntactic/printsize/printsize.err
Warning: Deprecated printsize qualifier was used in relation A in file printsize.dl at line 1
.decl A(x:number) printsize printsize
^-------------------------------------
Error: printsize qualifier already set in file printsize.dl at line 1
.decl A(x:number) printsize printsize
----------------------------^---------
1 errors generated, evaluation aborted
